@@ -106,17 +106,26 @@
 ##' @param statistic The statistic that should be applied to each wind
 ##' speed/direction bin. Can be \dQuote{mean} (default),
 ##' \dQuote{median}, \dQuote{max} (maximum),
-##' \dQuote{frequency}. \dQuote{stdev} (standard deviation) or
-##' \dQuote{weighted.mean}. Because of the smoothing involved, the
-##' colour scale for some of these statistics is only to provide an
-##' indication of overall pattern and should not be interpreted in
-##' concentration units e.g. for \code{statistic = "weighted.mean"}
-##' where the bin mean is multiplied by the bin frequency and divided
-##' by the total frequency. In many cases using \code{polarFreq} will
-##' be better. Setting \code{statistic = "weighted.mean"} can be
-##' useful because it provides an indication of the concentration *
-##' frequency of occurrence and will highlight the wind
-##' speed/direction conditions that dominate the overall mean.
+##' \dQuote{frequency}. \dQuote{stdev} (standard deviation),
+##' \dQuote{weighted.mean} or \dQuote{cpf} (Conditional Probability
+##' Function). Because of the smoothing involved, the colour scale for
+##' some of these statistics is only to provide an indication of
+##' overall pattern and should not be interpreted in concentration
+##' units e.g. for \code{statistic = "weighted.mean"} where the bin
+##' mean is multiplied by the bin frequency and divided by the total
+##' frequency. In many cases using \code{polarFreq} will be
+##' better. Setting \code{statistic = "weighted.mean"} can be useful
+##' because it provides an indication of the concentration * frequency
+##' of occurrence and will highlight the wind speed/direction
+##' conditions that dominate the overall mean.
+##'
+##' When \code{statistic = "cpf"} the conditional probability function
+##' (CPF) is plotted and a single (usually high) percentile level is
+##' supplied. The CPF is defined as CPF = my/ny, where my is the
+##' number of samples in the y bin (by default a wind direction, wind
+##' speed interval) with mixing ratios greater than the \emph{overall}
+##' percentile concentration, and ny is the total number of samples in
+##' the same wind sector (see Ashbaugh et al., 1985).
 ##' @param resolution Two plot resolutions can be set: \dQuote{normal} (the
 ##' default) and \dQuote{fine}, for a smoother plot. It should be noted that
 ##' plots with a \dQuote{fine} resolution can take longer to render and the
@@ -145,13 +154,14 @@
 ##' GAM and weighting is done by the frequency of measurements in each
 ##' wind speed-direction bin. Note that if uncertainties are
 ##' calculated then the type is set to "default".
-##' @param percentile If \code{statistic = "percentile"} then
-##' \code{percentile} is used, expressed from 0 to 100. Note that the
-##' percentile value is calculated in the wind speed, wind direction
-##' \sQuote{bins}. For this reason it can also be useful to set
-##' \code{min.bin} to ensure there are a sufficient number of points
-##' available to estimate a percentile. See \code{quantile} for more
-##' details of how percentiles are calculated.
+##' @param percentile If \code{statistic = "percentile"} or
+##' \code{statistic = "cpf"} then \code{percentile} is used, expressed
+##' from 0 to 100. Note that the percentile value is calculated in the
+##' wind speed, wind direction \sQuote{bins}. For this reason it can
+##' also be useful to set \code{min.bin} to ensure there are a
+##' sufficient number of points available to estimate a
+##' percentile. See \code{quantile} for more details of how
+##' percentiles are calculated.
 ##' @param cols Colours to be used for plotting. Options include
 ##' \dQuote{default}, \dQuote{increment}, \dQuote{heat}, \dQuote{jet}
 ##' and \code{RColorBrewer} colours --- see the \code{openair}
@@ -263,6 +273,11 @@
 ##' \code{\link{percentileRose}} for other ways of plotting directional data.
 ##' @references
 ##'
+##' Ashbaugh, L.L., Malm, W.C., Sadeh, W.Z., 1985. A
+##' residence time probability analysis of sulfur concentrations at
+##' ground canyon national park. Atmospheric Environment 19 (8),
+##' 1263-1270.
+##'
 ##' Carslaw, D.C., Beevers, S.D, Ropkins, K and M.C. Bell (2006).
 ##' Detecting and quantifying aircraft and other on-airport
 ##' contributions to ambient nitrogen oxides in the vicinity of a
@@ -323,7 +338,7 @@ polarPlot <- function(mydata, pollutant = "nox", x = "ws", wd = "wd", type = "de
     ## get rid of R check annoyances
     z = NULL
 
-    if (statistic == "percentile" & is.na(percentile)) {
+    if (statistic == "percentile" & is.na(percentile & statistic != "cpf")) {
         warning("percentile value missing,  using 50")
         percentile <- 50
     }
@@ -335,13 +350,15 @@ polarPlot <- function(mydata, pollutant = "nox", x = "ws", wd = "wd", type = "de
 
     if (uncertainty & length(pollutant) > 1) stop("Can only have one pollutant when uncertainty = TRUE")
 
-    if (!statistic %in% c("mean", "median", "frequency", "max", "stdev", "weighted.mean", "percentile")) {
+    if (!statistic %in% c("mean", "median", "frequency", "max", "stdev",
+                          "weighted.mean", "percentile", "cpf")) {
         stop (paste("statistic '", statistic, "' not recognised", sep = ""))
     }
 
     if (missing(key.header)) key.header <- statistic
     if (key.header == "weighted.mean") key.header <- c("weighted", "mean")
     if (key.header == "percentile") key.header <- c(paste(percentile, "th", sep = ""), "percentile")
+    if (key.header == "cpf") key.header <- c("CPF", "probability")
 
     ## greyscale handling
     if (length(cols) == 1 && cols == "greyscale") {
@@ -446,6 +463,9 @@ polarPlot <- function(mydata, pollutant = "nox", x = "ws", wd = "wd", type = "de
         wd <- cut(mydata[ , wd], breaks = seq(0, 360, 10), include.lowest = TRUE)
         x <- cut(mydata[ , x], breaks = seq(0, max.ws, length = 31), include.lowest = TRUE)
 
+        ## for CPF
+        Pval <- quantile(mydata[, pollutant], probs = percentile / 100, na.rm = TRUE)
+
         binned <- switch(statistic,
                          frequency = tapply(mydata[ , pollutant], list(wd, x), function(x)
                          length(na.omit(x))),
@@ -457,6 +477,8 @@ polarPlot <- function(mydata, pollutant = "nox", x = "ws", wd = "wd", type = "de
                          max(x, na.rm = TRUE)),
                          stdev = tapply(mydata[, pollutant], list(wd, x), function(x)
                          sd(x, na.rm = TRUE)),
+                         cpf =  tapply(mydata[, pollutant], list(wd, x),
+                         function(x) (length(which(x > Pval)) / length(x))),
                          weighted.mean = tapply(mydata[, pollutant], list(wd, x),
                          function(x) (mean(x) * length(x) / nrow(mydata))),
                          percentile = tapply(mydata[, pollutant], list(wd, x), function(x)
